# MineSegSAT

./: .gitignore  .python-version  LICENCE  README.md  Useroutput.csv  pyproject.toml  singularity.def
british_columbia_administrative/: british_columbia_administrative.dbf  british_columbia_administrative.shp  british_columbia_administrative.shx
canada_shp/: README.md  canada_mine_shapes.dbf  canada_mine_shapes.prj  canada_mine_shapes.shx
configs/: train.yaml
mine_seg_sat/: config.py  constants.py  dataloader.py  dataset.py  image_process.ipynb  image_process_pipeline.ipynb  organize_download_images.py  save_processed_image.ipynb  segformer.py  train.py
mine_seg_sat/download/: stac.py  tile.py
mine_seg_sat/models/: DBSCAN.ipynb  Hierarchical_clustering.ipynb  data_file.csv  knn.ipynb  logic_regression.ipynb  random_forest.ipynb  random_forest.py  segformer.py
mine_seg_sat/train/: __main__.py  binary.py  scale.py  utils.py
mine_seg_sat/train_utils/: binary.py  transforms.py  utils.py
mine_seg_sat/utils/: bands.py  distributed.py  path.py
notebooks/: download.ipynb  inference.ipynb
prepare_dataset/: dataset_splits.csv
shapefiles/around_kelowna/: around_kelowna.dbf  around_kelowna.shx  around_kelowna.xml
shapefiles/okanagan/: okanagan.dbf  okanagan.shx  okanagan.xml
shapefiles/thompson_nicola/: thompson_nicola.dbf  thompson_nicola.shp  thompson_nicola.shx
