[tool.poetry]
name = "mine-seg-sat"
version = "0.1.0"
description = "Segmentation training for identifying environmentally impacted mining sites"
authors = ["ezrajames <macdonaldezra@gmail.com>"]
readme = "README.md"
packages = [{include = "mine_seg_sat"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13"
empatches = "^0.2.3"
matplotlib = "^3.7.2"
rasterio = "^1.3.8"
geopandas = "^0.13.2"
tifffile = "^2023.8.25"
seaborn = "^0.12.2"
pydantic = "^2.3.0"
imagecodecs = "^2023.8.12"
albumentations = "^1.3.1"
openmim = "^0.3.9"
segmentation-models-pytorch = "^0.3.3"
einops = "^0.6.1"
pystac-client = "^0.7.5"
python-dotenv = "^1.0.0"
torchmetrics = "^1.1.1"
tensorboard = "^2.14.0"
"ruamel.yaml" = "^0.17.32"
mapclassify = "^2.6.0"
folium = "^0.14.0"
opencv-python = "^4.8.1.78"
requests = "^2.31.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
